1999-04-23  Ettore Perazzoli  <ettore@comm2000.it>

	* animator_demo.c (main): Removed Tux animation.

	* gnome-animator.c: Removed some unused variables.
	(draw_background_pixmap): Don't draw anything if `widget->window'
	is NULL.
	(gnome_animator_new_with_size): Set the requisition directly
	instead of using `gtk_widget_set_usize()'.

	* gnome-dock.c (gnome_dock_add_floating_item): Removed a couple of
	useless casts.
	(gnome_dock_add_floating_item): Do not remove the item from its
	parent.

	* gnome-dock-item.c (gnome_dock_item_map): If we are floating,
	call `gnome_dock_item_detach()' properly to do the floating setup.
	(gnome_dock_item_size_allocate): Applied patch from Damon Chaplin
	<damon@karuna.freeserve.co.uk> to fix handling of the child's
	requisition.

1999-04-21  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-dock-item.c (gnome_dock_item_destroy): Release di->name on
	the destroy handler.  Memory leak spotted by Morten Welinder again.

1999-04-20  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk-clock.c (gtk_clock_new): Bug fix from Damon Chaplin,
	clock->type was never initialized.

1999-04-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi-generic-child.h: fixed a typo. GNOME_IS_MDI_GENERIC_CHILD()
	seems better than GNOME_IS_MDI_MDI_CHILD().
	* gnome-mdi-generic-child.c, gnome-mdi.c, gnome-mdi-session.*:
	some documentation fixes.
	
1999-04-18  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-item.c (gnome_icon_text_item_stop_editing): Make sure
	iti_stop_editing is never called if we are not editing.  Fixes gmc
	bug #1065

1999-04-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-init.c (gnome_add_gtk_arg_callback): Use the macro correctly.

	* gnome-popup-menu.c (gnome_popup_menu_get_accel_group): Only use
	GTK 1.2.1 features if we have GTK 1.2.1

	* gnome-app-helper.c (create_help_entries): g_free temporary
	variable. 

Mon Apr 05 00:58:12 1999  George Lebl  <jirka@5z.com>
